--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,11 +2,8 @@ name: test
 on: push
 jobs:
   test:
-    runs-on:
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - name: All test
       run: bash -xv ./test.bash
-
-
-
